--- a/config.yml
+++ b/config.yml
@@ -1,25 +1,25 @@
 # Default Configuration File for RankDisplay
-# Copyright Redstonefreak589 2013 © All Rights reservered 
+# Copyright Redstonefreak589 2013 ï¿½ All Rights reservered 
 # Change the "Name" place to whatever you want your rank name to be
 # Change the "Description" place to whatever you want the 
 # Permissions/Abilities to say
 
 Rank1:
-    Description: defaul
-    Name: default
+    Description: Owner
+    Name: Owner
 
 Rank2:
-    Description: default
-    Name: default
+    Description: Co-Owner
+    Name: Co-Owner
 
 Rank3:
-    Description: default
-    Name: default
+    Description: Admin
+    Name: Admin
 
 Rank4:
-    Description: default
-    Name: default
+    Description: Mod
+    Name: Mod
 
 Rank5:
-    Description: default
-    Name: default
+    Description: Helper
+    Name: Helper
